Locale changed to SK

--- a/client/assets/styles/fonts.css
+++ b/client/assets/styles/fonts.css
@@ -28,12 +28,11 @@ h2 {
 }
 
 h3 {
-    color: #d3d3d3;
-    font-size: 0.8rem;   
+    color: #fee97e;
+    font-size: 1rem;   
 }
 
 p {
-    color: #cccccc;
-    font-size: 1rem;
+    font-size: 0.9rem;
     line-height: 1.7rem;
 }
